*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -1,28 +1,28 @@
-[[სურათი:RomanEmpire.png|thumb|370px|რომის იმპერია. წითელი - ძვ. წ II საუკუნე. სტაფილოსფერი - კეისარის და პომპეუსის დაბყრობების შემდეგ. ყვითელი - ოქტავიანის დაბყრობების შემდეგ. მწვანე - ჩვ.წ. II საუკუნე.]]
+[[სურათი:RomanEmpire.png|thumb|370px|რომის იმპერია. წითელი - ძვ. წ II საუკუნე. სტაფილოსფერი - კეისარის და პომპეუსის დაბყრობების შემდეგ. ყვითელი - ოქტავიუსის დაბყრობების შემდეგ. მწვანე - ჩვ.წ. II საუკუნე.]]
 
 <table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 
-'''რომის იმპერია''' - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიან ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოქალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
+'''რომის იმპერია''' - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიუს ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოქალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
 
-კეისარის მკვლელობის შემდეგ [[ძვ. წ. 44]] წელს, რომში სამოქალაქო დაპირისპირების ახალმა ტალღამ იფეთქა, რომლის მხოლოდ 27 წელს ოქტავიანის ანტონიუსზე გამარჯვებით დასრულდა. ამ დროისთვის ოქტავიანს უკვე აღარ დარჩა რესპუბლიკური ოპოზიცია, რის შედეგადაც მას იმავე წელს სენატმა მიანიჭა უზანაესი ძალაუფლება. 
+კეისარის მკვლელობის შემდეგ [[ძვ. წ. 44]] წელს, რომში სამოქალაქო დაპირისპირების ახალმა ტალღამ იფეთქა, რომლის მხოლოდ 27 წელს ოქტავიუსის ანტონიუსზე გამარჯვებით დასრულდა. ამ დროისთვის ოქტავიუსს უკვე აღარ დარჩა რესპუბლიკური ოპოზიცია, რის შედეგადაც მას იმავე წელს სენატმა მიანიჭა უზანაესი ძალაუფლება. 
 
 რესპუბლიკის იმპერიად გარდაქმნის კიდევ ერთი წინაპირობა იყო რომის სახელმწიფოს გაზრდა პუნიკური ომებისა, ბალკანეთის და მცირე აზიის ნაწილის დაპყრობის შედეგად. ამხელა სახელმწიფოს სამართავად რესპუბლიკის სახელმწიფო წყობა მოურგებელი აღმოჩნდა. 
 
-[[ძვ. წ. I]] საუკუნეში რომის იმპერია განფენილი იყო თანამედროვე [[პორტუგალია|პორტუგალიის]], [[ესპანეთი|ესპანეთის]], [[იტალია|იტალიის]], [[საბერძნეთი|საბერძნეთის]], [[მაკედონია|მაკედონიის]], [[თურქეთი|თურქეთის]], [[სირია|სირიის]], [[ისრაელი|ისრაელის]], [[ტუნისი|ტუნისის]] და ჩრდილოეთ [[ალჟირი|ალჟირის]] ტერიტორიებზე. ხოლო რომის პოლიტიკური გავლენა კიდევ უფრო მეტ ტერიტორიებზე ვრცელდებოდა. ამ დაპყრობებს კი კეისარმა მიუმატა გალია (თანამედროვე [[საფრანგეთი]]), [[პონტოს სამეფო]] ([[თურქეთი]]) და [[ბრიტანეთი]], ხოლო ოქტავიანმა [[ეგვიპტე]]. ამგვარად რომის იმპერია ძველი წელთაღრიცხვის დასასრულს მოიცავდა მთელს ხმელთაშუა ზღვისპირეთს და დასავლეთ ევროპას. ამის გარდა რომზე დამოკიდებული იყო მთელი რიგი სახელმწიფოები, რომლის მეფეებიც "რომაელი ხალხის მეგობრის და მოკავშირის" ტიტულს ატარებდნენ. იმ დროინდელ ევროპაში, დასავლეთ აზიაში და ჩრდილოეთ აფრიკაში არ იყო ძალა რომელიც შეძლებდა რომაულ ლეგიონებთან დაპირისპირებას.
+[[ძვ. წ. I]] საუკუნეში რომის იმპერია განფენილი იყო თანამედროვე [[პორტუგალია|პორტუგალიის]], [[ესპანეთი|ესპანეთის]], [[იტალია|იტალიის]], [[საბერძნეთი|საბერძნეთის]], [[მაკედონია|მაკედონიის]], [[თურქეთი|თურქეთის]], [[სირია|სირიის]], [[ისრაელი|ისრაელის]], [[ტუნისი|ტუნისის]] და ჩრდილოეთ [[ალჟირი|ალჟირის]] ტერიტორიებზე. ხოლო რომის პოლიტიკური გავლენა კიდევ უფრო მეტ ტერიტორიებზე ვრცელდებოდა. ამ დაპყრობებს კი კეისარმა მიუმატა გალია (თანამედროვე [[საფრანგეთი]]), [[პონტოს სამეფო]] ([[თურქეთი]]) და [[ბრიტანეთი]], ხოლო ოქტავიუსმა [[ეგვიპტე]]. ამგვარად რომის იმპერია ძველი წელთაღრიცხვის დასასრულს მოიცავდა მთელს ხმელთაშუა ზღვისპირეთს და დასავლეთ ევროპას. ამის გარდა რომზე დამოკიდებული იყო მთელი რიგი სახელმწიფოები, რომლის მეფეებიც "რომაელი ხალხის მეგობრის და მოკავშირის" ტიტულს ატარებდნენ. იმ დროინდელ ევროპაში, დასავლეთ აზიაში და ჩრდილოეთ აფრიკაში არ იყო ძალა რომელიც შეძლებდა რომაულ ლეგიონებთან დაპირისპირებას.
 
 
-==ოქტავიან ავგუსტუსის პრინციპატი==
+==ოქტავიუს ავგუსტუსის პრინციპატი==
 <small>იხ. [[რომაელ იმპერატორთა სია]]</small>
 [[სურათი:Statue-Augustus.jpg|thumb|ოქტავიან ავგუსტუსი]]
 
-ოქტავიანეს იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიანმა ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიან ავგუსტუსი'''.
+ოქტავიუსის იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიუსმა ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიუს ავგუსტუსი'''.
 
-ოქტავიანმა გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
+ოქტავიუსმა გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიუსი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
 
-ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიანმა შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
+ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიუსმა შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
 
-ოქტავიანმა შეკვეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან [[პრეტორიანელები|პრეტორიანელთა გვარდია]] შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლება მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოგორტების გარდა არანაერი სახის ჯარი არ დატოვა. მის დროს შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშუალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
+ოქტავიუსმა შეკვეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან [[პრეტორიანელები|პრეტორიანელთა გვარდია]] შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლება მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოჰორტების გარდა არანაირი სახის ჯარი არ დატოვა. მის დროს შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშუალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
 
 [[სურათი:Ital007.jpg|thumb|left|იტალიის რეგიონები ავგუსტუსის დროს]]
 მან, როგორც მთავარმა ცენზორმა ითავა ერის ზნეობრივი მდგომარეობის ზედამხედველობა. ამ პერიოდში პატრიარქალური რომაული ზნეჩვეულებები დაკნინებული იყო. ავგუსტუსმა მთელი რიგი კანონები გამოსცა ზნეობის ასამაღლებლად, მაგრამ რომაელები ამას უკმაყოფილებით შეხვდნენ. ავგუსტუსი ასევე ცდილობდა რომაელების დემოგრაფიული მდგომარეობის გაუმჯობესებას, ამ მიზნით იგი 3 და მეტ შვილიან მამებს მრავალ წასახალისებელ პრივილეგიებს ანიჭებდა, ხოლო მის სახელმწიფო აპარატში დაუცოლშვილებელი კაცი მაღალ თანამდებობას ვერ მიიღებდა.
