/* რომულუსის დაბადება და სიყმაწვილე */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -10,7 +10,13 @@
 ==რომულუსის დაბადება და სიყმაწვილე==
 [[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
 
-პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა|ალბაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამიტორუსი. ამიტორუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად.
+პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა|ალბაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამულიუსი. ამულიუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად. რამოდენიმე ხნის შემდეგ გაირკვა რომ იგი ფეხმძიმეთ არის. ეს ვესტას ქურუმების წესის უხეში დარღვევა იყო. ამისთვის ქალი დაამწყვრიეს და მასთან არავის არ უშვებდნენ.
+
+მან შვა ორი ვაჟი, ლამაზები და ძლიერები. ამან აღაშფოთა ამულიუსი და მან უბრძანა მსახურს ბავშვები ტყეში წაეყვანა და იქ დაეტოვებინა. მსახურმა ბავშვები კალათაში ჩასვა და მდინარის პირას დატოვა. მდინარე ადიდდა, აიტაცა კალათა და გაიტანა მდელოზე. აქ დედა მგელმა იპოვა ისინი და გამოკვება. ბავშვების დაცვაში მას კოდალა ეხმარებოდა. კოდალა და მგელი [[მარსი|მარსის]] ღვთაებრივი ცხოველები არიან. 
+
+ჩვილები იპოვა ამულიუსის მწყემსმა ფაუსტულმა იპოვა და გაზარდა. ნუმიტორუსის მომხრეებმა იზრუნეს მათ დანათლებაზე. ბიჭები ლამაზები, ღონივრები და გულადები გაიზარდნენ, მაგრამ რომულუსი მაინც უფრო ჭკვიანი და საზრიანი იყო, ყველა ხედავდა რომ იგი ძალაუფლებისთვის იყო დაბადებული. 
+
+ძმებმა თავის გარშემო ათასგვარი ხალხი შეკრიბეს, მათ შორის იყვნენ მონებიც, ღატაკებით და ათასგვარი ავანტიურისტებიც. მათთან ასევე ამულეუსის ტირანიით უკმაყოფილონი იკრიბებოდნე, ალბათ ამან უბიძგა ძმებს მეფის წინააღმდეგ აჯანყება მოეწყოთ. ამულეისი შეიპყრეს და მოკლეს.
 
 ==რომის დაარსება==
 
