--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -20,9 +20,10 @@
 
 ==რომის დაარსება==
 
-{{ესკიზი}}
+ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ 
 
 [[სურათი:Johann_Heinrich_Schönfeld_004.jpg|thumb|საბინელებთან ომი]]
+
 ==საბინელებთან ომი==
 
 {{ესკიზი}}
