--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -20,7 +20,7 @@
 
 ==რომის დაარსება==
 
-ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ 
+ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ, ძმებმა არ მოისურვეს ქალაქში დარჩენა და დამოუკიდებლად ქალაქის დაარსება განიძრახეს. ამ ნაბიჯისკენ მათ იმ ფაქტმაც უბიძგა, რომ მათ გარშემო შეკრებილ გაქცეულ მონებთან ქალაქის მოქალაქეებს ურთიერთობის სურვილი არ ჰქონდათ. ვერ მოასწრეს ძმებმა ქალაქის მშენებლობის დაწყება, როდესაც წაიჩხუბეს ადგილის არჩევის გამო. 
 
 [[სურათი:Johann_Heinrich_Schönfeld_004.jpg|thumb|საბინელებთან ომი]]
 
