--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -20,7 +20,11 @@
 
 ==რომის დაარსება==
 
-ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ, ძმებმა არ მოისურვეს ქალაქში დარჩენა და დამოუკიდებლად ქალაქის დაარსება განიძრახეს. ამ ნაბიჯისკენ მათ იმ ფაქტმაც უბიძგა, რომ მათ გარშემო შეკრებილ გაქცეულ მონებთან ქალაქის მოქალაქეებს ურთიერთობის სურვილი არ ჰქონდათ. ვერ მოასწრეს ძმებმა ქალაქის მშენებლობის დაწყება, როდესაც წაიჩხუბეს ადგილის არჩევის გამო. 
+ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ, ძმებმა არ მოისურვეს ქალაქში დარჩენა და დამოუკიდებლად ქალაქის დაარსება განიძრახეს. ამ ნაბიჯისკენ მათ იმ ფაქტმაც უბიძგა, რომ მათ გარშემო შეკრებილ გაქცეულ მონებთან ქალაქის მოქალაქეებს ურთიერთობის სურვილი არ ჰქონდათ. ვერ მოასწრეს ძმებმა ქალაქის მშენებლობის დაწყება, როდესაც წაიჩხუბეს ადგილის არჩევის გამო. რომულუსმა პალატინის ბორცვი აარჩია, ხოლო რემუსს სურდა ქალაქის რემორიასთან დაარსება. ძმებმა გადაწყვიტეს ფრინველებზე მკითხაობით გადაეწყვიტათ ეს საკითხი, რომის მხრიდან ექვსი ძერა გამოფრინდა ხოლო რემუსიდან ორჯერ მეტი. ზოგი ამბობს რომ რომულუსმა მოიტყუა და რემუსი რომ მივიდა ფრინველები მხოლოდ მაშინ გამოფრინდნენ. 
+
+რემუსი ამის გამო ძალიან გაბრაზდა და როდესაც რომულურმა დაიწყო კედლის გარშემო დაიწყო თხრილის თხრა, რემუსი მას დასცინოდა და უფუწებდა საქმეს.
+
+
 
 [[სურათი:Johann_Heinrich_Schönfeld_004.jpg|thumb|საბინელებთან ომი]]
 
