--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -22,7 +22,9 @@
 
 ალბაში ძალაუფლების ხელში ჩაგდების შემდეგ, ძმებმა არ მოისურვეს ქალაქში დარჩენა და დამოუკიდებლად ქალაქის დაარსება განიძრახეს. ამ ნაბიჯისკენ მათ იმ ფაქტმაც უბიძგა, რომ მათ გარშემო შეკრებილ გაქცეულ მონებთან ქალაქის მოქალაქეებს ურთიერთობის სურვილი არ ჰქონდათ. ვერ მოასწრეს ძმებმა ქალაქის მშენებლობის დაწყება, როდესაც წაიჩხუბეს ადგილის არჩევის გამო. რომულუსმა პალატინის ბორცვი აარჩია, ხოლო რემუსს სურდა ქალაქის რემორიასთან დაარსება. ძმებმა გადაწყვიტეს ფრინველებზე მკითხაობით გადაეწყვიტათ ეს საკითხი, რომის მხრიდან ექვსი ძერა გამოფრინდა ხოლო რემუსიდან ორჯერ მეტი. ზოგი ამბობს რომ რომულუსმა მოიტყუა და რემუსი რომ მივიდა ფრინველები მხოლოდ მაშინ გამოფრინდნენ. 
 
-რემუსი ამის გამო ძალიან გაბრაზდა და როდესაც რომულურმა დაიწყო კედლის გარშემო დაიწყო თხრილის თხრა, რემუსი მას დასცინოდა და უფუწებდა საქმეს.
+რემუსი ამის გამო ძალიან გაბრაზდა და როდესაც რომულურმა დაიწყო კედლის გარშემო დაიწყო თხრილის თხრა, რემუსი მას დასცინოდა და უფუჭებდა საქმეს. ერთხელად გადაახტა თხრილს და მკვდარი დაეცა. ზოგი ამბობს რომ რომულუსმა მოკლა, ხოლო სხვები ამბობენ რომ რომულუსის მეგობრებმა ცელერუსმა. 
+
+რემუსის დაკრძალვის შემდეგ რომულუსმა დაასრულა ქალაქის მშენებლობა. მან ერუტრიიდან მოიწვია ქურუმები ქალაქის საკურთხევლად. 
 
 
 
