--- a/21_აპრილი.mw
+++ b/21_აპრილი.mw
@@ -3,11 +3,10 @@
  
 ==დღის მოვლენები==
 
-*[[-753]] : დაარსდა ქალაქი [[რომი]], რომაული ერის დასაწყისი
+*[[ძვ. წ. 753]] : დაარსდა ქალაქი [[რომი]], რომაული ერის დასაწყისი
 *[[1709]] : [[გიორგი XI]] შეთქმულთა ხელით დაიღუპა [[ავღანეთი|ავღანეთში]]
 *[[1945]] : საბჭოთა ჯარები შეიჭრნენ ქალაქ [[ბერლინი|ბერლინში]]
 *[[1967]] : [[საბერძნეთი|საბერძნეთში]] მოხდა სამხედრო გადატრიალება.
-
 
 ==ამ დღეს დაბადებულნი==
 *[[1488]] : [[ჰუტენი, ულრიხ ფონ]] - გერმნელი ჰუმანისტი, მწერალი
