--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,3 +1,21 @@
 ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
 
 [[კატეგორია:ძველი_რომი]]
+
+
+
+[[bg:Алба Лонга]]
+[[ca:Alba Longa]]
+[[de:Alba Longa]]
+[[en: Alba Longa]]
+[[es:Alba Longa]]
+[[fr:Albe-la-Longue]]
+[[ko:알바 롱가]]
+[[it:Alba Longa]]
+[[la:Alba Longa]]
+[[nl:Alba Longa]]
+[[pt:Alba Longa]]
+[[ro:Alba Longa]]
+[[ru:Альба-Лонга]]
+[[fi:Alba Longa]]
+[[sv:Alba Longa]]
