*Empty MediaWiki Message*

--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,4 +1,4 @@
-''([[ლათინური ენა|ლათ]]. '''Alba Longa''')''ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
+(''[[ლათინური ენა|ლათ]]. '''Alba Longa''''') ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
 
 [[კატეგორია:ძველი_რომი]]
 
