/* რომულუსის დაბადება და სიყმაწვილე */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -10,7 +10,7 @@
 ==რომულუსის დაბადება და სიყმაწვილე==
 [[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
 
-პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა_ლონგა|ალბა ლონგაშიში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამულიუსი. ამულიუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად. რამოდენიმე ხნის შემდეგ გაირკვა რომ იგი ფეხმძიმეთ არის. ეს ვესტას ქურუმების წესის უხეში დარღვევა იყო. ამისთვის ქალი დაამწყვრიეს და მასთან არავის არ უშვებდნენ.
+პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა_ლონგა|ალბა ლონგაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამულიუსი. ამულიუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად. რამოდენიმე ხნის შემდეგ გაირკვა რომ იგი ფეხმძიმეთ არის. ეს ვესტას ქურუმების წესის უხეში დარღვევა იყო. ამისთვის ქალი დაამწყვრიეს და მასთან არავის არ უშვებდნენ.
 
 მან შვა ორი ვაჟი, ლამაზები და ძლიერები. ამან აღაშფოთა ამულიუსი და მან უბრძანა მსახურს ბავშვები ტყეში წაეყვანა და იქ დაეტოვებინა. მსახურმა ბავშვები კალათაში ჩასვა და მდინარის პირას დატოვა. მდინარე ადიდდა, აიტაცა კალათა და გაიტანა მდელოზე. აქ დედა მგელმა იპოვა ისინი და გამოკვება. ბავშვების დაცვაში მას კოდალა ეხმარებოდა. კოდალა და მგელი [[მარსი|მარსის]] ღვთაებრივი ცხოველები არიან. 
 
