*Empty MediaWiki Message*

--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,7 +1,8 @@
-(''[[ლათინური ენა|ლათ]]. '''Alba Longa''''') ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
+'''ალბა ლონგა''' (''[[ლათინური ენა|ლათ]].'' Alba Longa) ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
 
 [[კატეგორია:ძველი_რომი]]
 
+{{ესკიზი}}    
 
 
 [[bg:Алба Лонга]]
