--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -26,8 +26,7 @@
 
 რემუსის დაკრძალვის შემდეგ რომულუსმა დაასრულა ქალაქის მშენებლობა. მან ერუტრიიდან მოიწვია ქურუმები ქალაქის საკურთხევლად. გავრცელებული აზრის მიხედვით რომი დაარსდა მაისის კალენდებამდე 11 დღით ადრე, მეექვსე ოლიმპიადიდან მესამე წელს ([[ძვ. წ. 753]] წლის [[21 აპრილი]]).
 
-
-
+ქალაქის დაარსების შემდეგ რომულუსმა დაყო სამხედრო სამსახურისთვის ვარგისი ხალხი ზარმებად. ყოველი რაზმი შედგებოდა 3000 ფეხოსნისგან და 300 ცხენოსნისგან და ეწოდებოდა [[ლეგიონი]]. ასი საუკეთესო მოქალაქისგან რომულუსმა [[სენატი]] ჩამოაყალიბა, რაც უხუცესთა საბჭოს ნიშნავს. სენატერობს ეწოდათ პატრიციუსები ან იმიტომ რომ ისინი კანონიერი შვილების მამები იყვნენ, ან იმიტომ რომ მათ საკუთარი მამების დასახელება შეეძლოთ.
 
 [[სურათი:Johann_Heinrich_Schönfeld_004.jpg|thumb|საბინელებთან ომი]]
 
