--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -28,7 +28,7 @@
 
 ქალაქის დაარსების შემდეგ რომულუსმა დაყო სამხედრო სამსახურისთვის ვარგისი ხალხი ზარმებად. ყოველი რაზმი შედგებოდა 3000 ფეხოსნისგან და 300 ცხენოსნისგან და ეწოდებოდა [[ლეგიონი]]. ასი საუკეთესო მოქალაქისგან რომულუსმა [[სენატი]] ჩამოაყალიბა, რაც უხუცესთა საბჭოს ნიშნავს. სენატერობს ეწოდათ [[პატრიციუსები]] ან იმიტომ რომ ისინი კანონიერი შვილების მამები იყვნენ, ან იმიტომ რომ მათ საკუთარი მამების დასახელება შეეძლოთ, მათ შორის ვინც რომის დაარსებისას ჩამოვიდნენ ქალაქში, ამის გაკეთება ბევრს არ შეეძლო. სხვა მოსაზრებით კი რომულუსს უნდოდა ძლიერთა და სუსტთა შორის მამაშვილური დამოკიდებულების ჩამოყალიბება და ამიტომ უწოდა ძლიერთ მამები, პატრონები, ანუ მფარველები. 
 
-ამ დამოკიდებულებამ გამოიწვია პატრონების და კლიენტების ინსტიტუტების ჩამოყალიბება. პატრონი კლიენტს იცავდა სასამართლოებში, ეხმარებოდა რჩევებით, უხსნიდა კანონებს, ხოლო კლიენტი ემსახურებოდა პატრონის ინტერესებს. სასამართლოში კლიენტებს და პატრონებს ერთმანეთის წინააღმდეგ ჩვენების მიცემის უფლება არ ჰქონდათ.
+ამან გამოიწვია პატრონების და კლიენტების ინსტიტუტების ჩამოყალიბება. პატრონი კლიენტს იცავდა სასამართლოებში, ეხმარებოდა რჩევებით, უხსნიდა კანონებს, ხოლო კლიენტი ემსახურებოდა პატრონის ინტერესებს. სასამართლოში კლიენტებს და პატრონებს ერთმანეთის წინააღმდეგ ჩვენების მიცემის უფლება არ ჰქონდათ.
 
 [[სურათი:Johann_Heinrich_Schönfeld_004.jpg|thumb|საბინელებთან ომი]]
 
