--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -34,7 +34,7 @@
 
 ==საბინელებთან ომი==
 
-{{ესკიზი}}
+ქალაქის დაარსებიდან ოთხი თვის შემდეგ ქალაქში უკვე ბევრი ხალხი იყო დასახლებული, მათ შორის ცოლიანები უმცირესობას წარმოადგენდნენ, ბევრი ჩამოსახლებული კი საკმაოდ საეჭვო პირი იყო, ნებაყოფლობით ქალები წესიერი ოჯახებიდან მათ ცოლად არ გაჰყვებოდნენ. 
 
 [[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|left|გამარჯვებული რომულუსი]]
 
