--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -34,7 +34,9 @@
 
 ==საბინელებთან ომი==
 
-ქალაქის დაარსებიდან ოთხი თვის შემდეგ ქალაქში უკვე ბევრი ხალხი იყო დასახლებული, მათ შორის ცოლიანები უმცირესობას წარმოადგენდნენ, ბევრი ჩამოსახლებული კი საკმაოდ საეჭვო პირი იყო, ნებაყოფლობით ქალები წესიერი ოჯახებიდან მათ ცოლად არ გაჰყვებოდნენ. 
+ქალაქის დაარსებიდან ოთხი თვის შემდეგ ქალაქში უკვე ბევრი ხალხი იყო დასახლებული, მათ შორის ცოლიანები უმცირესობას წარმოადგენდნენ, ბევრი ჩამოსახლებული კი საკმაოდ საეჭვო პირი იყო, ნებაყოფლობით ქალები წესიერი ოჯახებიდან მათ ცოლად არ გაჰყვებოდნენ. რომულუსმა ჩათვალა რომ ამ ხალხისგან ახალი ქალაქის მოქალაქეების ჩამოსაყალიბებლად და ასევე საბინელებთან დასაახლოვებლად სჭირდებოდა ნათესაური კავშირების შექმნა. 
+
+რომულუსმა ჭორი გაავრცელა, თითქოს აღმოაჩინა ღმერთ [[კონსუსი|კონსუსის]] საკურთხეველი, რომელიც დიდ ცირკსი მოათავსეს და რომულუსმა დიდი მსხვერპლშეწირვები მოაწყო. დღესასწაულზე უამრავი ხალხი შეიკრიბა, რომულუსი კი სენატორებთან ერთად წითელ მოსასხამში გამოწყობილი იჯდა. მან ანიშნა რომაელებს დაეწყოთ თავდასხმა. რომაელებმა იშიშვლეს ხმლები და საბინელების ქალიშვილებს ეცნენ. მამებს არ შეუშალეს ხელი გაქცეულიყვნენ. მოიტაცეს მხოლოდ ქალიშვილები, არცერთი გათხოვილი ქალი არ დაუკავებიათ. ეს ამბავი [[18 აგვისტო|18 აგვისტოს]] მოხდა.
 
 [[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|left|გამარჯვებული რომულუსი]]
 
