--- a/პალატინუსი.mw
+++ b/პალატინუსი.mw
@@ -1,5 +1,18 @@
-პალანტიუმი - რომის ადგილილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
+[[პალატიუმი]] - რომის ადგილილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
 
 [[ვერგილიუსი|ვერგილიუსის]] "ენეიდის" მიხედვით
 
 [[კატეგორია:ძველი რომი]]
+
+
+[[bg:Палатин]]
+[[de: Palatin (Rom)]]
+[[en:Palatine Hill]]
+[[fr:Mont Palatin]]
+[[he:גבעת הפאלאטיום]]
+[[it:Palatino]]
+[[ja:パラティーノ]]
+[[nl:Palatijn]]
+[[pl:Palatium]]
+[[pt:Palatino]]
+[[sv:Palatinen]]
