--- a/18_აგვისტო.mw
+++ b/18_აგვისტო.mw
@@ -3,7 +3,7 @@
 
 == დღის მოვლენები ==
 
-
+* [[ძვ. წ. 753]] წელს [[რომის სამეფო|რომაელებმა]] საბინელი ქალები მოიტაცეს.
 
 == ამ დღეს დაბადებულნი ==
 
