*Empty MediaWiki Message*

--- a/პალატინუსი.mw
+++ b/პალატინუსი.mw
@@ -1,4 +1,4 @@
-[[პალატიუმი]] - რომის ადგილილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
+'''პალატიუმი''' - რომის ადგილილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
 
 [[ვერგილიუსი|ვერგილიუსის]] "ენეიდის" მიხედვით
 
