*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -56,6 +56,8 @@
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
 [[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:დაბადებული ძვ. წ. 771]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 717]]
 
 
 [[de:Romulus und Remus]]
