*Empty MediaWiki Message*

--- a/პალატინუსი.mw
+++ b/პალატინუსი.mw
@@ -1,8 +1,9 @@
-'''პალატიუმი''' - რომის ადგილილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
+'''პალატიუმი''' (''[[ლათინური ენა|ლათ.]]'': Mons Palatinus, ''[[იტალიური ენა|იტალ.]]'': Monte Palatino) - რომის ადგილზე ლეგენდარული დასახლება, რომელიც ტოადან გამოქცეულების ჩამოსვლამდე 60 წლით ადრე დაარსა ევანდროსმა, ჰერმესის ვაჟმა, აკადიის მეფემ. 
 
 [[ვერგილიუსი|ვერგილიუსის]] "ენეიდის" მიხედვით
 
 [[კატეგორია:ძველი რომი]]
+{{ესკიზი}}    
 
 
 [[bg:Палатин]]
