*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Campidoglio.JPG|thumb|მგელი, რომელმაც ჩვილი რომულუსი და რემუსი გამოკვება]]
-'''რომულუსი''' (დ. [[ძვ. წ. 771]] -[[5 ივლისი]], დ. [[ძვ. წ. 717]])  და '''რემუსი''' (დ. [[ძვ. წ. 771]] - [[21 აპრილი]], დ. [[ძვ. წ. 753]]) 
+'''რომულუსი''' ([[ძვ. წ. 771]] -[[5 ივლისი]]-[[ძვ. წ. 717]])
 
 ==რომის დაარსების შესახებ==
 
