--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Campidoglio.JPG|thumb|მგელი, რომელმაც ჩვილი რომულუსი და რემუსი გამოკვება]]
-'''რომულუსი''' ([[ძვ. წ. 771]] -[[5 ივლისი]]-[[ძვ. წ. 717]])
+'''რომულუსი''' (''[[ლათინური ენა|ლათ]]. '''Romulus''''') ([[ძვ. წ. 771]] -[[5 ივლისი]]-[[ძვ. წ. 717]])
 
 ==რომის დაარსების შესახებ==
 
