*Empty MediaWiki Message*

--- a/ძვ._წ._716.mw
+++ b/ძვ._წ._716.mw
@@ -3,13 +3,12 @@
 </div>
 
 ==მოვლენები==
-
+* [[რომის სამეფო|რომის]] მეფედ [[ნუმა პომპილიუსი]] აირჩიეს
 
 ==დაიბადნენ==
 
 
 ==გარდაიცვალნენ==
-* გარდაიცვალა [[რომულუსი]], [[რომის სამეფო|რომის]] ლეგენდარული დამაარსებელი და პირველი მეფე
 
 
 [[კატეგორია:ძვ. წ. 716|*]]
