*Empty MediaWiki Message*

--- a/ძვ._წ._771.mw
+++ b/ძვ._წ._771.mw
@@ -6,7 +6,7 @@
 
 
 ==დაიბადნენ==
-* დაიბადა [[რომულუსი]], [[რომი|რომის]] ლეგენდარული დამაარსებელი
+* [[რომულუსი]], [[რომი|რომის]] ლეგენდარული დამაარსებელი
 
 ==გარდაიცვალნენ==
 
