--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -39,7 +39,7 @@
 რომულუსმა ჭორი გაავრცელა, თითქოს აღმოაჩინა ღმერთ [[კონსუსი|კონსუსის]] საკურთხეველი, რომელიც დიდ ცირკსი მოათავსეს და რომულუსმა დიდი მსხვერპლშეწირვები მოაწყო. დღესასწაულზე უამრავი ხალხი შეიკრიბა, რომულუსი კი სენატორებთან ერთად წითელ მოსასხამში გამოწყობილი იჯდა. მან ანიშნა რომაელებს დაეწყოთ თავდასხმა. რომაელებმა იშიშვლეს ხმლები და საბინელების ქალიშვილებს ეცნენ. მამებს არ შეუშალეს ხელი გაქცეულიყვნენ. მოიტაცეს მხოლოდ ქალიშვილები, არცერთი გათხოვილი ქალი არ დაუკავებიათ. ეს ამბავი [[18 აგვისტო|18 აგვისტოს]] მოხდა.
 
 [[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|left|გამარჯვებული რომულუსი]]
-საბინებებმა რომულუსთან ელჩობა გააგზავნეს და სთხოვეს მოტაცებული ქალების დაბრუნება, ზარალის ანაზღაურება და კანონიერი გზებით დანათესავება. რომულუსმა ქალები არ დააბრუნა და მოუწოდა საბინელებს ეცნოთ ქორწინებები. საბინელთა მეფემ მიიჩნია რომ რომულუსის თავხედობა ყველა ზღვარს სცილდება და იგი ძალიან საშიშია და გაილაშქრა რომზე. როდესაც ორი ლაშქარი ერთმანეთს შეხვდა, რომულუსი პირადად შეებრძოლა და დაამარცხა საბინელთა მხედართმთავარი.
+საბინებებმა რომულუსთან ელჩობა გააგზავნეს და სთხოვეს მოტაცებული ქალების დაბრუნება, ზარალის ანაზღაურება და კანონიერი გზებით დანათესავება. რომულუსმა ქალები არ დააბრუნა და მოუწოდა საბინელებს ეცნოთ ქორწინებები. საბინელთა მეფემ მიიჩნია რომ რომულუსის თავხედობა ყველა ზღვარს სცილდება და იგი ძალიან საშიშია და გაილაშქრა რომზე. როდესაც ორი ლაშქარი ერთმანეთს შეხვდა, რომულუსი პირადად შეებრძოლა და დაამარცხა საბინელთა მხედართმთავარი. მან ასევე აიღო საბინელთა ქალაქი და უბრძანა მოსახლეობას დაენგრიათ სახლები და რომში გადმოსახლებულიყვნენ.
 
 ==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
 
