--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -41,7 +41,9 @@
 [[სურათი:Jean_Auguste_Dominique_Ingres_019.jpg|thumb|left|გამარჯვებული რომულუსი]]
 საბინებებმა რომულუსთან ელჩობა გააგზავნეს და სთხოვეს მოტაცებული ქალების დაბრუნება, ზარალის ანაზღაურება და კანონიერი გზებით დანათესავება. რომულუსმა ქალები არ დააბრუნა და მოუწოდა საბინელებს ეცნოთ ქორწინებები. საბინელთა მეფემ მიიჩნია რომ რომულუსის თავხედობა ყველა ზღვარს სცილდება და იგი ძალიან საშიშია და გაილაშქრა რომზე. როდესაც ორი ლაშქარი ერთმანეთს შეხვდა, რომულუსი პირადად შეებრძოლა და დაამარცხა საბინელთა მხედართმთავარი. მან ასევე აიღო საბინელთა ქალაქი და უბრძანა მოსახლეობას დაენგრიათ სახლები და რომში გადმოსახლებულიყვნენ. ამის შემდეგ სხვა ქალაქებმაც გაილაშქრეს რომის წინააღმდეგ, მაგრამ ყველა დამარცხდა. რომაელები ანგრებდნენ საბინელთა ქალაქებს და მოსახლეობას აიძულებდნენ რომში გადმოსახლებულიყვნენ, მათ მიწებს კი რომაელები იყოფდნენ, მხოლოდ მოტაცებული ქალების მამების მიწებს არ ახლეს ხელი.
 
-საბინელებმა კიდევ შეკრიბეს ჯარი და გაემართნენ რომისკენ. ქალაქის ერთერთი მცველის ქალიშვილმა გაუღო საბინელებს ჭიშკარი, რადგან საბინელთა ოქროს სამაჯურები მოეწონა. ქალაქში შესვლის შემდეგ საბინელებმა მოიხსნეს სამაჯურები და ფარები და ესროლეს მოღალატეს, ისე რომ იგი ფარების სიმძიმის ქვეშ დაიღუპა.
+საბინელებმა კიდევ შეკრიბეს ჯარი და გაემართნენ რომისკენ. ქალაქის ერთერთი მცველის ქალიშვილმა ტაპიამ გაუღო საბინელებს ჭიშკარი, რადგან საბინელთა ოქროს სამაჯურები მოეწონა. ქალაქში შესვლის შემდეგ საბინელებმა მოიხსნეს სამაჯურები და ფარები და ესროლეს მოღალატეს, ისე რომ ტაპია ფარების სიმძიმის ქვეშ დაიღუპა.
+
+ქალაქში ცხარე ბრძოლა გაიმართა, რომული დაჭრეს, უპირატესობას ვერცერთი მხარე ვერ აღწევდა, დანაკარგები კი ორივეს დიდი ჰქონდა. ამ დროს გამოჩდნენ მოტაცებული საბინელი ქალები და შეევედრნენ ორივე მხარის მეომრებს შეეწყვიტათ ბრძოლა, მათ დააწმუნეს საბინელები რომ რომაელი ქმრები მათ პატივს სცემენ და უყვართ და ახლა, როდესაც ისინი ცოლები და დედები გახდნენ გვიანია მათი უკან დაბრუნება. ასე დასრულდა ბრძოლა და დაიწყო მოლაპარაკებები, ქალებმა კი დაჭრილებს უპატრონეს და ანახებს საბინელებს რომ ქმრები მათ პატივისცემით და სიყვარულით ეპყრობიან.
 
 ==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
 
