--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -3,18 +3,18 @@
 
 ==რომის დაარსების შესახებ==
 
-როგორ დაერქვა რომს სახელი, რომელიც მთელმა მსოფლიომ იცის უცნობია, ერთერთი მოსაზრებით ქალაქი პელასგებმა დაარსეს და თავისი იარაღის სიძლიერის აღსანიშნავად დაარქვეს ქალაქს ეს სახელი (Rhōmē ბერძნულად ნიშნავს ძალას). სხვა მოსაზრებით [[ტროა|ტროას]] დაცემის შემდეგ ვინც გადარჩა და მოახერხა გემებზე დაჯდომა, გასცურეს ერუტრიისკენ. ქალები ძალიან ცუდად იტანდნენ ცხოვრებას გემებში და ერთერთმა მათგანმა, ვინმე რომამ სხვა ქალები დაარწმუნა დაეწვათ გემები. ქმრები იძულებულნი გახდნენ ერტ ადგილას დასახლებულიყვნენ, ეს ადგილი [[პალანტიუმი]] იყო. ახალ ადგილს ტრიანელი ლტოლვილები კარგად მოერგნენ, რომა მათ პატივით შეამკეს და მისი სახელი დაარქვეს ახლად დაარსებულ ქალაქს.
+როგორ დაერქვა რომს სახელი, რომელიც მთელმა მსოფლიომ იცის, უცნობია, ერთერთი მოსაზრებით ქალაქი პელასგებმა დაარსეს და თავისი იარაღის სიძლიერის აღსანიშნავად დაარქვეს ქალაქს ეს სახელი (Rhōmē ბერძნულად ნიშნავს ძალას). სხვა მოსაზრებით [[ტროა|ტროას]] დაცემის შემდეგ ვინც გადარჩა და მოახერხა გემებზე დაჯდომა, გასცურეს ერუტრიისკენ. ქალები ძალიან ცუდად იტანდნენ ცხოვრებას გემებში და ერთერთმა მათგანმა, ვინმე რომამ სხვა ქალები დაარწმუნა დაეწვათ გემები. ქმრები იძულებულნი გახდნენ ერტ ადგილას დასახლებულიყვნენ, ეს ადგილი [[პალანტიუმი]] იყო. ახალ ადგილს ტრიანელი ლტოლვილები კარგად მოერგნენ, რომა მათ პატივით შეამკეს და მისი სახელი დაარქვეს ახლად დაარსებულ ქალაქს.
 
 არსებობს კიდევ მრავალი მოსაზრება, მაგრამ ანტიკური ავტორები და მათ შორის პლუტარქოსიც მიიჩნევდნენ რომ რომის დამაარსებელი რომულუსი იყო. რომულუსის წარმომავლობაზეც მრავალი მოსაზრება არსებობს. ზოგი მიიჩნევს რომ იგი [[ენეოსი|ენეოსის]] ვაჟი იყო და ძმასთან ერთად იტალიაში მოხვდა როდესაც პატარა ბავშვი იყო. სხვა მოსაზრებით იგი ენეოსის ქალიშვილის ვაჟი იყო, ხოლო მამამისი ომის ღმერთი [[არესი]] იყო. ამის გარდა რომულუსის და რემუსის დაბადების შესახებ კიდევ არაერთი ლეგებდა მოგვითხრობს.
 
 ==რომულუსის დაბადება და სიყმაწვილე==
 [[სურათი:Romvlvs et Remvs.jpg|thumb|left|ჩვილი რომულუსი და რემუსი]]
 
-პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა_ლონგა|ალბა ლონგაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორუსი და ამულიუსი. ამულიუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად. რამოდენიმე ხნის შემდეგ გაირკვა რომ იგი ფეხმძიმეთ არის. ეს ვესტას ქურუმების წესის უხეში დარღვევა იყო. ამისთვის ქალი დაამწყვრიეს და მასთან არავის არ უშვებდნენ.
+პლუტარქოსი რომულუსის დაბადების შემდეგ მონათხრობს მიიჩნევს სადოთ: [[ალბა_ლონგა|ალბა ლონგაში]] მეფობდნენ ენეოსის ჩამომავლები ნუმიტორი და ამულიუსი. ამულიუსმა ხელში ჩაიგდო ძმის ტახტხი და რათა მის ძმისშვილს არ ჰყოლოდა შვილები, დანიშნა იგი ქალღმერთ [[ვესტა|ვესტას]] ქურუმად. რამოდენიმე ხნის შემდეგ გაირკვა რომ იგი ფეხმძიმეთ არის. ეს ვესტას ქურუმების წესის უხეში დარღვევა იყო. ამისთვის ქალი დაამწყვრიეს და მასთან არავის არ უშვებდნენ.
 
 მან შვა ორი ვაჟი, ლამაზები და ძლიერები. ამან აღაშფოთა ამულიუსი და მან უბრძანა მსახურს ბავშვები ტყეში წაეყვანა და იქ დაეტოვებინა. მსახურმა ბავშვები კალათაში ჩასვა და მდინარის პირას დატოვა. მდინარე ადიდდა, აიტაცა კალათა და გაიტანა მდელოზე. აქ დედა მგელმა იპოვა ისინი და გამოკვება. ბავშვების დაცვაში მას კოდალა ეხმარებოდა. კოდალა და მგელი [[მარსი|მარსის]] ღვთაებრივი ცხოველები არიან. 
 
-ჩვილები იპოვა ამულიუსის მწყემსმა ფაუსტულმა იპოვა და გაზარდა. ნუმიტორუსის მომხრეებმა იზრუნეს მათ დანათლებაზე. ბიჭები ლამაზები, ღონივრები და გულადები გაიზარდნენ, მაგრამ რომულუსი მაინც უფრო ჭკვიანი და საზრიანი იყო, ყველა ხედავდა რომ იგი ძალაუფლებისთვის იყო დაბადებული. 
+ჩვილები იპოვა ამულიუსის მწყემსმა ფაუსტულმა იპოვა და გაზარდა. ნუმიტორის მომხრეებმა იზრუნეს მათ განათლებაზე. ბიჭები ლამაზები, ღონივრები და გულადები გაიზარდნენ, მაგრამ რომულუსი მაინც უფრო ჭკვიანი და საზრიანი იყო, ყველა ხედავდა რომ იგი ძალაუფლებისთვის იყო დაბადებული. 
 
 ძმებმა თავის გარშემო ათასგვარი ხალხი შეკრიბეს, მათ შორის იყვნენ მონებიც, ღატაკებით და ათასგვარი ავანტიურისტებიც. მათთან ასევე ამულეუსის ტირანიით უკმაყოფილონი იკრიბებოდნე, ალბათ ამან უბიძგა ძმებს მეფის წინააღმდეგ აჯანყება მოეწყოთ. ამულეისი შეიპყრეს და მოკლეს.
 
