/* დიოკლექტიანე და ტეტრარქატი */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -261,7 +261,7 @@
 
 [[284]] წელს არმიან იმპერატორად გაიუს ვალერიუს ავრელიუს [[დიოკლექციანე]] აღიარეს. ან დროისთვის გალიაში დიდი აჯანყება იყო. აჯანყებულებმა იმპერატორებიც აირჩიეს. მძიმე სიტუაციით ბრიტანეთში რომის ფლოტის უფროსმაც [[კარაუზიუსი|კარაუზიუსმა]] ისარგებმა, [[287]] წელს მან თავი იმპერატორად გამოაცხადა. ამის გარდა მავრიტანიაში აჯანყდნენ ბერბერები. ფრანკები და ალემანები ისევ იმუქრებოდნენ შემოჭრით. რეინის საზღვარზე იმპერატორმა გაგზავნა მხედართმთავარი [[მაქსიმიანუსი]], რომელიც [[286]] წელს ავგუსტუსად და თავის თანამმართველად გამოაცხადა. მაქსიმიანუსს უნდა დასავლეთ პროვინციები ემართა, ხოლო დიოკლექტიანეს აღმოსავლეთი.
 
-[[სურათი:Tetrarchs.jpg|thumb|left|ტეტრატქები]]
+[[სურათი:Tetrarchs.jpg|thumb|left|ტეტრარქები]]
 მაქსიმიანუსს გალიაში აჯანყების ჩახშობა ძალიან გაუჭირდა. ჩახშობის შემდეგ კი გალიის უამრავი სოფელი დაცარიელდა და გაპარტახდა. ასევე დიდი მსხვერპლით მან ჩაახშო აჯანყება აფრიკაში. ამით არისტოკრატია ძალიან კმაყოფილი დარჩა. 
 
 შეიცვალა იმპერატორების სტატუსიც. ახლა იმპერატორი პრინცეპსტი კი აღარ იყო, არამედ დომინუსი (ბატონი). ამგვარად ავგუსტუსის დროს დამყარებული პრინციპატი დასრულდა. ეს აისახა კარის ეტიკეტზეც. ახლა იმპერატორის წინაშე ყველა უნდა დამხობილიყო. ეტიკეტი ძალიან დაემსგავსა სპარსულს.
