/* საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -47,7 +47,13 @@
 
 ==საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი==
 
-{{ესკიზი}}
+მხარეები შეთანხვდნენ დაეტოვებინათ ქალები ვინც დარჩენას მოისურვებდა, ყველანი დასახლებულიყვნენ რომში და რომულუსთან ერთად ემეფა საბინელ მეფესაც.
+
+ამგვარად რომის მოსახლეობა გაორმაგდა, ძველ პატრიციუსებს ახალი 100 პატრიციი დაემატა საბინელებისგან. ლეგიონებშიც უკვე 6 ათასი ფეხოსანი იყო და 600 ცხენოსანი. ხალხიც სამ ნაწილად გაყვეს, პირველს უწოდეს "რამნენსუსი" რომულის საპატივცემლოდ, "ტატნესუსი" ტატიუსის საპატივცემლოდ და "ლუკერსუსი" როშჩის საპატივცემლოდ, სადაც ბევრი თავს აფარებდა. ამ დანაყოფს ტრიბი ეწოდა, ხოლო ტრიბებს სათავეში ტრიბუნები ედგნენ. ყოველი ტრიბი შედგებოდა ათი კურიისგან. 
+
+რომაელებმა და საბინებმა ბევრი რამე გადაიღეს ერთმანეთისგან, სამხედრო აღჭურვილობა, კალენდარი, დღესასწაულები, რელიგია. რომულუსი რელიგიურ რიტუალების გულმოდგინედ იცავდა, ბევრი კულტის წარმოშვებას სწორედ მის სახელს უკავშირებენ.
+
+ტატიუსის მმართველობის მეხუთე წელს, მისმა მსახურებმა შენიშნეს ლავრენტიუმიდან მომავალე ელჩები და სწდეს მათთვის ფულის წართმევა, ეჩებმა წინააღმდეგობა გაუწიეს და მსახურებმა ისინი მოკლეს. როდესაც რომულუსმა შეიტყო ეს ამბავი, იგი განრისხდა და ბრძანა სიკვდილით დაესაჯა, ხოლო ტატიუსი ყოველგვარად ცდილობდა შეეცვლევნა რომულისთვის გადაწყვეტილება, მათ შორის ეს ერთადერთი ღია დაპირისპირება იყო.
 
 ==მმართველობა და გარდაცვალება==
 
