--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -55,6 +55,8 @@
 
 ტატიუსის მმართველობის მეხუთე წელს, მისმა მსახურებმა შენიშნეს ლავრენტიუმიდან მომავალე ელჩები და სწდეს მათთვის ფულის წართმევა, ეჩებმა წინააღმდეგობა გაუწიეს და მსახურებმა ისინი მოკლეს. როდესაც რომულუსმა შეიტყო ეს ამბავი, იგი განრისხდა და ბრძანა სიკვდილით დაესაჯა, ხოლო ტატიუსი ყოველგვარად ცდილობდა შეეცვლევნა რომულისთვის გადაწყვეტილება, მათ შორის ეს ერთადერთი ღია დაპირისპირება იყო. ელჩების ნათესავებმა რადგან ტატიუსის მიზეზით ვერ მიიღეს სამართალი, თავს დაესხნენ მას და მოკლედ, ხოლო რომულუსს თაყვანი სცეს მისი სამართლიანობის გამო. რომულუსმა ტატიუსი პატივით დაკრძალა, მაგრამ მისი მკვლელების დასჯა საჭიროდ არ ჩათვალა.
 
+რომულუსმა დაუპყრო ბევრი მეზობელი ქალაქი, ზოგის მოსახლეობა რომში გადმოასახლა და დაანგრია, ხოლო ზოგ ქალაქში რომაელები ჩაასახლა.
+
 ==მმართველობა და გარდაცვალება==
 
 {{ესკიზი}}
