*Empty MediaWiki Message*

--- a/ედუარდ_ფონ_ლევინსკი.mw
+++ b/ედუარდ_ფონ_ლევინსკი.mw
@@ -1,4 +1,4 @@
-'''ედუარდ იულიუს ლუდვიგ ფონ ლევინსკი''' ([[გერმ.]]: Eduard Julius Ludwig von Lewinski) (* [[22 თებერვალი]] [[1829]], [[მიუნსტერი]]; † [[17 სექტემბერი]] [[1906]], მისსავე სასახლეში ბურგვიც-ტრებნიცში) – [[გერმანელები|გერმანელი]] სამხედრო მოღვაწე, [[პრუსია|პრუსიის]] არმიის არტილერიის გენერალი.
+'''ედუარდ იულიუს ლუდვიგ ფონ ლევინსკი''' ([[გერმ.]]: Eduard Julius Ludwig von Lewinski) (* [[22 თებერვალი]], [[1829]], [[მიუნსტერი]]; † [[17 სექტემბერი]], [[1906]], მისსავე სასახლეში ბურგვიც-ტრებნიცში) – [[გერმანელები|გერმანელი]] სამხედრო მოღვაწე, [[პრუსია|პრუსიის]] არმიის არტილერიის გენერალი.
 
 
 
@@ -33,3 +33,12 @@
 : [[17 სექტემბერი]] : ედუარდ ფონ ლევინსკი გარდაიცვალა საკუთარ სასახლეში ბურგვიც-ტრებნიცში.
 
 მისი უმცროსი ძმა [[ლევინსკი, ალფრედ ფონ|ალფრედ ფონ ლევინსკიც]] პრუსიის არმიის გენერალი იყო, ხოლო სახელგანთქმული გერმანელი გენერალ-ფელდმარშალი [[მანშტაინი, ერიხ ფონ|ერიხ ფონ მანშტაინი]] მისი ღვიძლი შვილი (''დაბ.'': ერიხ ფონ ლევინსკი), რომელიც მოგვიანებით ბიძამ გენერალმა გეორგ ფონ მანშტაინმა იშვილა და თავისი გვარი მისცა.
+
+
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1829]]
+[[კატეგორია:გარდაცვლილი 1906]]
+
+
+[[de:Eduard Julius Ludwig von Lewinski]]
