--- a/უილიამ_გარისონი.mw
+++ b/უილიამ_გარისონი.mw
@@ -3,3 +3,9 @@
 [[1993]] წლის [[3 ოქტომბერი|3 ოქტომბერს]] გარისონი მეთაურობდა [[მოგადიშუ|მოგადიშუში]] [[ადიდი, მოჰამედ ფარაჰ|მოჰამედ ფარაჰ ადიდის]] დაპატიმრების ოპერაციას, რომელიც ქარუმატებლად დასრულდა. მოგადიშუს ქულჩებში გამართულ ბრძოლას 19 ამერიკელი ჯარისკაცის და 350-500 სომალელის სიცოცხლე ემსხვერპლა. [[1996]] წლის [[2 აგვისტო|2 აგვისტოს]] ადიდის სიკვდილის მომდევნო დღეს გარისონი სამხედრო სამსახურიდან გადადგა.
 
 გარისონი და [[მოგადიშუს ბრძოლა]] გადაღებულ იქნა ფილმში "[[შავი ქორის ვარდნა]]" ([[ინგლ.]]: Black Hawk Down).
+
+[[კატეგორია:ამერიკელები]]
+[[კატეგორია:ამერიკელი სამხედრო მოღვაწეები]]
+
+[[de:William Garrison]]
+[[en:William F. Garrison]]
