კატეგორიები და ბმულები

--- a/გერდ_ფონ_რუნდშტეტი.mw
+++ b/გერდ_ფონ_რუნდშტეტი.mw
@@ -64,3 +64,24 @@
 ==ლიტერატურა==
 * Rudolf Günter Huber: Gerd von Rundstedt. Sein Leben und Wirken im Spannungsfeld gesellschaftlicher Einflüsse und persönlicher Standortbestimmung, Peter Lang Verlag :Frankfurt am Main 2004, 465 S., ISBN 3-631-51933
 * Günther Blumentritt: Von Rundstedt: The Soldier and the Man, 1952
+
+
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1875]]
+[[კატეგორია:გარდაცვლილი 1953]]
+
+
+[[de:Gerd von Rundstedt]]
+[[en:Gerd von Rundstedt]]
+[[es:Gerd von Rundstedt]]
+[[fi:Gerd von Rundstedt]]
+[[fr:Gerd von Rundstedt]]
+[[he:גרד פון רונדשטט]]
+[[it:Gerd von Rundstedt]]
+[[ja:ゲルト・フォン・ルントシュテット]]
+[[nl:Gerd von Rundstedt]]
+[[no:Gerd von Rundstedt]]
+[[pl:Gerd von Rundstedt]]
+[[sl:Gerd von Rundstedt]]
+[[sv:Gerd von Rundstedt]]
