/* საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -57,6 +57,8 @@
 
 რომულუსმა დაუპყრო ბევრი მეზობელი ქალაქი, ზოგის მოსახლეობა რომში გადმოასახლა და დაანგრია, ხოლო ზოგ ქალაქში რომაელები ჩაასახლა.
 
+რომის სიძლიერე დღითიდღე მატულობდა, ეტრუსკები მათ გაძლიერებას შიშით უყურებდნენ. ქალაქ ვიიმ პირველმა გამოუცხადა ომი რომს. ბრძოლაში რომაელებმა და რომულუსმა არნახული მამაცობა გამოაჩინეს. როდესაც მტრის ჯარი დამარცხდა, რომულუსმა დაიკავა ქალაქი. ვიის მოქალაქეებმა სამშვიდობო ზავი დადეს რომაელებთან, ზავის პირობებით, მათ გადასცეს ნაწილი ტერიტორიები რომს და მძევლებათ 50 ყველაზე პატივცემული მოქალაქე გაატანეს. ოქტომბრის იდებში რომულუსი ტრიუმფით დაბრუნდა რომში.
+
 ==მმართველობა და გარდაცვალება==
 
 ეს რომულუსის უკანასკნელი ომი იყო. როდესაც მისი ბაბუა ნუმიტორი გარდაიცვალა, იგი უნდა გამხდარიყო ალბა ლონგას მეფე, მაგრამ მან ალბას მოქალაქეებს უფლება მისცა თვითონ ემართათ ქალაქისთვის და მხოლოდ მმართველი დაუნიშნა. ამან რომაელებს უბიძგა ისეთი სახელმწიფოს შექმნის სურვილისკენ, სადაც არ იქნებოდა მეფე, ვინაიდან, ამ დროისთვის რომულუსი ერთპიროვნული მმართველი გახდა და პატრიციებს მხოლოდ ადათის დაცვის მიზნით კრებდა და არა მათი რჩევების მოსასმენად.
