*Empty MediaWiki Message*

--- a/მიურა,_ჟოაკიმ.mw
+++ b/მიურა,_ჟოაკიმ.mw
@@ -1,5 +1,5 @@
 [[სურათი:François Pascal Simon Gérard 005.jpg|thumb|ჟოაკიმ მიურა]]
-'''ჟოაკიმ მიურა''' (''[[ფრანგული ენა|ფრანგ.]]:'' Joachim Murat) (* [[25 მარტი]] [[1767]], [[ლაბასტიდ-ფურტიურნიე]], ''დღ.'' [[ლაბასტიდ-მიურა]], [[საფრანგეთი]]; † [[13 ოქტომბერი]] [[1815]], [[პიცო]], [[კალაბრია]]) - [[ნეაპოლის სამეფო|ნეაპოლის მეფე]] [[1808]]-[[1815]] წლებში, [[ბონაპარტი, ნაპოლეონ|ნაპოლეონის]] სიძე და [[საფრანგეთის მარშალი]].
+'''ჟოაკიმ მიურა''' (''[[ფრანგული ენა|ფრანგ.]]:'' Joachim Murat) (* [[25 მარტი]], [[1767]], [[ლაბასტიდ-ფურტიურნიე]], ''დღ.'' [[ლაბასტიდ-მიურა]], [[საფრანგეთი]]; † [[13 ოქტომბერი]], [[1815]], [[პიცო]], [[კალაბრია]]) - [[ნეაპოლის სამეფო|ნეაპოლის მეფე]] [[1808]]-[[1815]] წლებში, [[ბონაპარტი, ნაპოლეონ|ნაპოლეონის]] სიძე და [[საფრანგეთის მარშალი]].
 
 
 
@@ -29,3 +29,25 @@
 *[[1815]]
 : მიურა შეეცადა ნეაპოლისათვის დამოუკიდებლობის მოპოვებით მოსახლების თავის მხარეზე გადაბირებას, მაგრამ ეს ცდა მარცხით დამთავრდა. იგი დააპატიმრეს და სიკვდილით დასჯა მიუსაჯეს.
 : [[13 ოქტომბერი]] - ქალაქ [[პიცო|პიცოში]] [[ბურბონი (დინასტია)|ბურბონი]] მეფის [[ფერნანდო IV (სიცილია)|ფერნანდო IV]]-ის ბრძანებით ჟოაკიმ მიურა დახვრიტეს.
+
+
+[[კატეგორია:ფრანგები]]
+[[კატეგორია:ფრანგი სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1767]]
+[[კატეგორია:გარდაცვლილი 1815]]
+
+
+
+[[de:Joachim Murat]]
+[[en:Joachim Murat]]
+[[es:Joachim Murat]]
+[[fr:Joachim Murat]]
+[[it:Gioacchino Murat]]
+[[ja:ジョアシャン・ミュラ]]
+[[nl:Joachim Murat]]
+[[no:Joachim Murat]]
+[[pl:Joachim Murat]]
+[[ru:Мюрат, Иоахим]]
+[[sv:Joachim Murat]]
+[[th:โจอาคิม มูราท์]]
+[[zh:若阿尚·缪拉]]
