--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -63,6 +63,8 @@
 
 ეს რომულუსის უკანასკნელი ომი იყო. როდესაც მისი ბაბუა ნუმიტორი გარდაიცვალა, იგი უნდა გამხდარიყო ალბა ლონგას მეფე, მაგრამ მან ალბას მოქალაქეებს უფლება მისცა თვითონ ემართათ ქალაქისთვის და მხოლოდ მმართველი დაუნიშნა. ამან რომაელებს უბიძგა ისეთი სახელმწიფოს შექმნის სურვილისკენ, სადაც არ იქნებოდა მეფე, ვინაიდან, ამ დროისთვის რომულუსი ერთპიროვნული მმართველი გახდა და პატრიციებს მხოლოდ ადათის დაცვის მიზნით კრებდა და არა მათი რჩევების მოსასმენად.
 
+რომული იქამდე მივიდა რომ ვიიდან წამოყვანილი მძევლები სენატის აზრის კითხვის გარეშე დააბრუნა, ამით მან სენატორები ძალიან შეურაცხყო. მალე, უვლისსის ნონებში რომულუსი გაქრა. მის გარდაცვალებაზე ამ თარიღის გარდა სხვა სანდო ცნობები არ არსებობს. ზოგი მიიჩნევს რომ სენატორები მას [[ვულკანი|ვულკანის]] ტაძარში დაეხნენ თავს, მოკლედ, სხეული აკუწეს და გადამალეს. სხვა მოსაზრებით რომულუსი გაქრა რომის გარეთ, ეგრეთ წოდებულ თხის ჭაობებთან. კიდევ სხვა მოსაზრებით, მან ფორუმზე შეკრიბა ხალხი, ამ დროს მზის დაბნელება მოხდა, ატყდა ქალიშხალი, ხოლო როდესაც გამოიდარა მეფე ვერსად ვერ იპოვეს, სენატორებმა გამოაცხადეს რომ იგი ღმერთებთან ავიგა და აკრძალეს მასზე ცნობების მოგროვება. ზოგმა დაიჯერა ეს, სხვებმა კი პატრიციებს მეფის მკვლელობა დააბრალეს.
+
 ==შენიშვნები==
 * სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
