/* მმართველობა და გარდაცვალება */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -65,6 +65,8 @@
 
 რომული იქამდე მივიდა რომ ვიიდან წამოყვანილი მძევლები სენატის აზრის კითხვის გარეშე დააბრუნა, ამით მან სენატორები ძალიან შეურაცხყო. მალე, უვლისსის ნონებში რომულუსი გაქრა. მის გარდაცვალებაზე ამ თარიღის გარდა სხვა სანდო ცნობები არ არსებობს. ზოგი მიიჩნევს რომ სენატორები მას [[ვულკანი|ვულკანის]] ტაძარში დაეხნენ თავს, მოკლედ, სხეული აკუწეს და გადამალეს. სხვა მოსაზრებით რომულუსი გაქრა რომის გარეთ, ეგრეთ წოდებულ თხის ჭაობებთან. კიდევ სხვა მოსაზრებით, მან ფორუმზე შეკრიბა ხალხი, ამ დროს მზის დაბნელება მოხდა, ატყდა ქალიშხალი, ხოლო როდესაც გამოიდარა მეფე ვერსად ვერ იპოვეს, სენატორებმა გამოაცხადეს რომ იგი ღმერთებთან ავიგა და აკრძალეს მასზე ცნობების მოგროვება. ზოგმა დაიჯერა ეს, სხვებმა კი პატრიციებს მეფის მკვლელობა დააბრალეს.
 
+ითვლება რომ რომულუსი 54 წლის ასაკში, მეფობის 38 წელს გაქრა.
+
 ==შენიშვნები==
 * სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
