*Empty MediaWiki Message*

--- a/კათარინა_ფონ_ლოთრინგენი.mw
+++ b/კათარინა_ფონ_ლოთრინგენი.mw
@@ -13,4 +13,10 @@
 * [[მათილდე (ბადენი)|მათილდე]] († [[1485]])
 
 
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:დაბადებული  1407]]
+[[კატეგორია:გარდაცვლილი 1439]]
+
+
+
 [[de:Katharina von Lothringen]]
